Add openapi and swagger documentation to the code